--- a/CSS/main.css
+++ b/CSS/main.css
@@ -20,3 +20,18 @@ ul{
   text-align:left
 }
 </style>
+<style type="text/css">
+h1{
+  text-align:center
+}
+body {
+background-color: silver;
+color: white;
+padding: 20px;
+font-family: FreeMono, monospace;
+text-align:center}
+p {
+  background-color: #8F70BC;
+  background-color: hsl(264, 40%, 59%);
+}
+</style>
